# stockfighter

./: CMakeLists.txt  README.md
include/stockfighter/: api.hpp  game.hpp  types.hpp
src/: CMakeLists.txt  api.cpp  game.cpp  rest.cpp  rest.hpp
test/: CMakeLists.txt  test.cpp  test_api.cpp  test_game.cpp
